--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,5 +33,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   jaffle_shop:
-    +materialized: table
+    marts:
+      core:
+        +materialized: table
+    staging:
+      jaffle_shop:
+        +materialized: view    
+
   
